# FfmpegAndroid

./: README.md  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/wanwan/audiovideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wanwan/audiovideo/: ExamplesActivity.java  MainActivity.java  ShowImgActivity.java
app/src/main/java/com/wanwan/audiovideo/widget/: CustomImageView.java
app/src/main/res/layout/: activity_main.xml  activity_play_filter.xml  activity_show_img.xml
app/src/test/java/com/wanwan/audiovideo/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/libs/include/libavutil/: ffversion.h
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: ffmpeg-examples.cpp  native-lib.cpp
ffmpeglib/src/main/java/com/wanwan/ffmpeglib/: Examples.java  FfmpegUtils.java
gradle/wrapper/: gradle-wrapper.properties
